cargo-features = ["edition2024"]

[package]
name = "mptbench"
version = "0.1.0"
edition = "2024"

[dependencies]
digest = "0.10"
slab = "0.4"
smallvec = { version = "1.13", features = ["const_generics", "union"] }

[dev-dependencies]
hex-literal = "0.4"
cita_trie = "5.0"
hasher = "0.1.4"
proptest = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha3 = "0.10.6"
tempfile = "3.3.0"
thiserror = "1.0.61"
uuid = { version = "1.2.2", features = ["v4"] }

[features]
debug-dump = []
